force-app/main/default/objects/FEC_Team__c/FEC_Team__c.object-meta.xml
<CustomObject>
    <description>Team Categories</description>
    <label>Team</label>
    <nameField>
        <label>Team ID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>