force-app/main/default/objects/FEC_Team__c/fields/FEC_Team_Active__c.field-meta.xml
<CustomField>
    <fullName>FEC_Team_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Team Active</label>
    <type>Checkbox</type>
</CustomField>