force-app/main/default/objects/FEC_Team__c/fields/FEC_Team_Label__c.field-meta.xml
<CustomField>
    <fullName>FEC_Team_Label__c</fullName>
    <label>Team Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>